Fixed scroll bar always showing for windows-container on Chrome; Added ability to go to desktop on mobile when clicking outside any window on live apps selection;

--- a/src/System/AppManager/Styles/Window.css
+++ b/src/System/AppManager/Styles/Window.css
@@ -4,7 +4,7 @@ windows-container {
         left: 0;
         width: 100%;
         height: 100%;
-        overflow: scroll;
+        overflow-x: hidden;
         transition: 0.3s;
 }
 
